--- a/argocd-aplication.yaml
+++ b/argocd-aplication.yaml
@@ -12,7 +12,7 @@ spec:
     path: views
   destination: 
     server: https://kubernetes.default.svc
-    namespace: appDeployd
+    namespace: appdeployd
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
