--- a/views/service.yaml
+++ b/views/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: appDeployd-service
+  name: appdeployd-service
 spec:
   selector:
-    app: appDeployd
+    app: appdeployd
   ports:
   - port: 8080
     protocol: TCP
