--- a/views/deployment.yaml
+++ b/views/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         ports:
         - containerPort: 8080
         resources:
-          request:
+          requests:
             memory: 64Mi
             cpu: 20m
           limits:
