--- a/views/deployment.yaml
+++ b/views/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: appdeployd
+  name: web-deploy
   labels:
     app: web
 spec:
@@ -15,7 +15,7 @@ spec:
         app: web
     spec:
       containers:
-      - name: appdeployd
+      - name: hello-pod
         image: 19930501/deployd-k8s:1.0
         ports:
         - containerPort: 8080
