--- a/views/ingress.yaml
+++ b/views/ingress.yaml
@@ -1,10 +1,10 @@
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: my-ingress
   annotations:
     # If the class annotation is not specified it defaults to "gce".
-    kubernetes.io/ingress.class: "gce"
+    kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
   - http:
