--- a/views/ingress.yaml
+++ b/views/ingress.yaml
@@ -1,10 +1,10 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: my-ingress
   annotations:
     # If the class annotation is not specified it defaults to "gce".
-    kubernetes.io/ingress.class: "nginx"
+    kubernetes.io/ingress.class: "gce"
 spec:
   rules:
   - http:
@@ -15,4 +15,4 @@ spec:
           service:
             name: ps-nodeport
             port:
-              number: 60000
+              number: 31111
