--- a/views/ingress.yaml
+++ b/views/ingress.yaml
@@ -1,18 +1,18 @@
-apiVersion: networking.k8s.io/v1
+apiVersion: networking.k8s.io/v1beta
 kind: Ingress
 metadata:
   name: my-ingress
+  namespace: appdeployd
   annotations:
-    # If the class annotation is not specified it defaults to "gce".
-    kubernetes.io/ingress.class: "gce"
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
-  - http:
-      paths:
-      - path: /*
-        pathType: ImplementationSpecific
-        backend:
-          service:
-            name: ps-nodeport
-            port:
-              number: 31111
+    - http:
+        paths:
+          - path: /*
+            pathType: Prefix
+            backend:
+              service:
+                name: ps-nodeport
+                port:
+                  number: 9090
