--- a/views/svc-lb.yml
+++ b/views/svc-lb.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mi-servicio
+  name: ps-nodeport
 spec:
   selector:
     app: web-deploy
@@ -9,7 +9,7 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 9090
-  clusterIP: 10.43.37.217
+  clusterIP: 10.0.171.239
   type: LoadBalancer
 status:
   loadBalancer:
