--- a/views/svc-lb.yml
+++ b/views/svc-lb.yml
@@ -1,17 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: load-balancer
+  name: ps-lb
 spec:
-  selector:
-    app: web-deploy
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 9090
-  clusterIP: 10.43.130.178
   type: LoadBalancer
-status:
-  loadBalancer:
-    ingress:
-      - ip: 192.168.0.105
+  ports:
+  - port: 80
+    targetPort: 9090
+  selector:
+    app: web
